--- a/-config.yml
+++ b/-config.yml
@@ -1,4 +1,4 @@
 title: Dalia Seyam
 #logo: "C:\Users\ahmed\Downloads\Image portfolio.jpeg"
 #description: Data Analyst 
-theme: minima
+theme: jekyll-theme-minimal
