--- a/-config.yml
+++ b/-config.yml
@@ -1,4 +1,5 @@
 title: Dalia Seyam
 #logo: "C:\Users\ahmed\Downloads\Image portfolio.jpeg"
 #description: Data Analyst 
-theme: minimal
+#show_downloads: true
+theme: jekyll-theme-minimal
