--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Dalia Seyam
-#logo: C:\Users\ahmed\Downloads\Image portfolio.jpeg
+#logo: /assets/img/headshot_circle.png
 #description: Data Analyst 
 #show_downloads: true
 theme: jekyll-theme-minimal
